2006-04-25  Fabio Marzocca  <thesaltydog@gmail.com>

	* C/baobab.xml: editing help file

2006-04-23  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* ChangeLog:
	* Makefile.am:
	* baobab.omf.in:
	* C/baobab.xml:
	* C/legal.xml: Intial stub for baobab's documentation.